# motorland

./: .clang-format  .gitignore  CMakeLists.txt  README.md  S97motorsd  TZ.md  arm-linux-musleabi.cmake  cross-compile.env  problems.md  spec.md
.github/worflows/: build.yml
.github/workflows/: build.yml
config_manager/: CMakeLists.txt  README.md  lib_cyaml_install.cmake  lib_yaml_install.cmake  libcyaml-install.sh  main.c
config_manager/examples/: example.yaml
config_manager/include/: config.h  config_manager.h  config_parser.h  motor_initializer.h
config_manager/src/: config.c  config_manager.c  config_parser.c  motor_initializer.c
config_manager/temp/: temp_parser.py
configs/: binary_example.txt  config.c  config_manager.c  config_parser.c  config_parser.h  example.yaml  gpio_example.yaml  motor_initializer.c  motor_initializer.h  temp_parser.py
configs/temp/yamlparser/: CHANGELOG.md  README.md  package.yaml  yamlparser.cabal
daemon/: CMakeLists.txt
docs/eng/: contributing.md  problems.md  setup-instructions.md  spec.md
docs/ru/: architecture.md  problems.md  spec.md
manager/: CMakeLists.txt
manager/src/: manager.c
managers/: protocol_manager.h
motorsd/: CMakeLists.txt
motorsd/include/: daemon.h  daemon_utils.h  motor_invoker.h
motorsd/src/: command_parser.c  daemon.c  motor_invoker.c
motorsd/test/: test.c
proto_libs/: CMakeLists.txt
proto_libs/camhi_uart_lib/: CMakeLists.txt  main.c
proto_libs/camhi_uart_lib/src/: camhi_uart_lib.c
proto_libs/common/: CMakeLists.txt  motor_internal.c  motor_internal.h
proto_libs/gpio_lib/: CMakeLists.txt  main.c
proto_libs/gpio_lib/include/: motor_api.h  motor_internal.h
proto_libs/gpio_lib/libs/: README.md
proto_libs/gpio_lib/src/: gpio_lib.c
proto_libs/include/: motor_api.h
src/proto-libs/: api.h  internal.h  lib-common-example.c  lib-gpio-example.c
state_manager/: CMakeLists.txt
state_manager/include/: protocol_manager.h  state_manager.h
state_manager/src/: gpio_manager.c  state_manager.c  uart_manager.c
